--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.4",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "cors": "^2.8.5",
     "lorem-ipsum": "^2.0.8",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
